Adapted to stylesheet changes in deepamehta3-client.

--- a/src/main/resources/web/style/dm3-typeeditor.css
+++ b/src/main/resources/web/style/dm3-typeeditor.css
@@ -17,6 +17,10 @@
     margin-right: 0.7em;
 }
 
+.field-editor-lines-input {
+    width: 2em !important;  /* would be overridden by main.css */
+}
+
 .add-field-button {
     margin-top: 1em;
     margin-bottom: 1em;
